--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
               <!-- <div><img class="up-arrow" src="img/up-arrow.png"></div> -->
               <div class="label bold">Who's this guy?</div>
               <div>
-                I'm a  fleelancing Front-End Developer 
-                
+                I'm a freelancing Front-End Developer
                 in Melbourne,Australia
                 <br />
                 I have serious passion for UI effects, animations and creating
