--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
       </section>
 
-      <!-- PORTFOLIO -->
+      <!-- PORTFOLIO --
       <section class="flex" id="portfolio">
         <div class="header waypoint" data-animation="slide-in-right">
           PROJECTS
@@ -404,7 +404,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>--!>
 
       <!-- BLOG -->
       <section id="blog">
